部分组件，完善配置菜单，添加简易图片素材库，Mock模拟接口，优化部分配置，升级包

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "src/**/*.vue",
     "types/**/*.d.ts",
     "types/**/*.ts",
-    "types/**/*.tsx"
+    "types/**/*.tsx",
+    "mock/**/*.ts"
   ],
   "exclude": ["node_modules", "dist", "**/*.js"]
 }
