--- a/.eslintignore
+++ b/.eslintignore
@@ -1,10 +1,22 @@
+snapshot*
 dist
+lib
+es
+esm
 node_modules
 src/assets
-!.eslintrc.cjs
-!.prettier.config.cjs
-!.prettierignore
-!.editorconfig
+static
+cypress
+_site
+temp*
+static/
+!.eslintrc.js
+!.prettierrc.js
+!.eslintrc
+!.stylelintrc.js
 !.gitignore
+!.gitattributes
+!.editorconfig
 vite.config.ts
 yarn.lock
+mock
