--- a/package.json
+++ b/package.json
@@ -6,33 +6,41 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode dev",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/**/*.{vue,ts} --fix"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "@iconify-json/ep": "^1.1.10",
     "@types/file-saver": "^2.0.5",
+    "@types/sortablejs": "^1.15.1",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.6",
+    "element-plus": "^2.3.7",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "pinia": "^2.1.4",
+    "sortablejs": "^1.15.0",
     "swiper": "^9.4.1",
     "typescript": "^5.1.3",
+    "unplugin-icons": "^0.16.3",
     "vant": "^4.5.0",
+    "vite-plugin-mock": "^3.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.2.30",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "eslint": "^8.42.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint": "^8.43.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.15.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "scss": "^0.2.4",
@@ -40,6 +48,6 @@
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vue-draggable-plus": "^0.2.0-beta.2",
-    "vue-tsc": "^1.6.5"
+    "vue-tsc": "^1.8.1"
   }
 }
