链接选择，资产，用户信息，辅助分割，图片魔方等组件，优化结构

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,5 +48,6 @@
     ".eslintrc.cjs": ".eslintignore,prettier.config.cjs,.prettierignore,.editorconfig",
     "vite.config.ts": "tsconfig.json"
   },
-  "terminal.integrated.scrollback": 10000
+  "terminal.integrated.scrollback": 10000,
+  "cSpell.words": ["uuidv4"]
 }
