组件图标，删除头部组件

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,5 @@
     "vite.config.ts": "tsconfig.json"
   },
   "terminal.integrated.scrollback": 10000,
-  "cSpell.words": ["uuidv4"]
+  "cSpell.words": ["iconify", "sortablejs", "uuidv4"]
 }
