--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "lint": "eslint src/**/*.{vue,ts} --fix"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@iconify-json/ep": "^1.1.10",
     "@types/file-saver": "^2.0.5",
     "@types/sortablejs": "^1.15.1",
     "@types/uuid": "^9.0.2",
@@ -38,6 +36,8 @@
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.10",
+    "@iconify/vue": "^4.1.1",
     "@types/node": "^20.3.1",
     "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-vue": "^4.2.3",
