--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "types": ["vite/client"],
+    "types": ["vite/client", "element-plus/global"],
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "jsx": "preserve",
     "paths": {
