--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9",
     "vue-draggable-plus": "^0.2.0-beta.2",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.1",
+    "vue3-draggable-resizable": "^1.6.5"
   }
 }
