--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@icon-park/vue-next": "^1.4.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/mockjs": "^1.0.10",
     "@types/node": "^18.19.4",
     "@types/sortablejs": "^1.15.7",
     "@types/uuid": "^9.0.7",
@@ -50,19 +49,19 @@
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
-    "mockjs": "^1.1.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "prettier": "^3.1.1",
     "sass": "^1.69.6",
     "typescript": "5.3.3",
     "unocss": "^0.58.2",
     "vite": "^5.0.10",
-    "vite-plugin-mock": "^3.0.0",
+    "vite-plugin-mock-dev-server": "^1.4.3",
     "vue-draggable-plus": "^0.3.3",
     "vue-tsc": "^1.8.27",
     "vue3-draggable-resizable": "^1.6.5"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "type": "module"
 }
