--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vue-tsc --noEmit && vite build",
     "clean": "rm -rf node_modules",
     "init": "pnpm run clean && pnpm install",
+    "prettier": "prettier --write \"src/**/*.{vue,ts,tsx}\"",
     "lint": "eslint src/**/*.{vue,ts} --fix",
     "prepare": "husky install",
     "commit": "git-cz"
@@ -26,7 +27,7 @@
     "ts-pattern": "^5.0.6",
     "undo-stacker": "^0.2.1",
     "uuid": "^9.0.1",
-    "vue": "^3.3.13",
+    "vue": "^3.4.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -34,7 +35,7 @@
     "@commitlint/config-conventional": "^18.4.3",
     "@icon-park/vue-next": "^1.4.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^18.19.4",
+    "@types/node": "^20.10.6",
     "@types/sortablejs": "^1.15.7",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
