--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "lib": ["esnext", "DOM", "DOM.iterable", "scripthost"],
     "jsx": "preserve",
+    "jsxImportSource": "vue",
     "paths": {
       "@/*": ["src/*"],
       "/#/*": ["types/*"]
