--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@panzoom/panzoom": "^4.5.1",
     "axios": "^1.6.3",
     "element-plus": "^2.4.4",
     "gesto": "^1.19.4",
