chore: 🤖 重构组件,完善撤销功能,添加env类型

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-ENV = production
+MODE = production
 VITE_API_URL = 'https://production.com'
 VITE_APP_WS_URL = 'wss://production.com'
 VITE_SOCKET_MAX_RECONNECT_ATTEMPTS = 10
