--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-ENV = test
+MODE = test
 VITE_API_URL = 'http://test.com'
 VITE_APP_WS_URL = 'http://test.com'
 VITE_SOCKET_MAX_RECONNECT_ATTEMPTS = 0
