--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "prettier/prettier": "warn",
     "@typescript-eslint/ban-ts-comment": "off",
     "vue/multi-word-component-names": "off",
+    "vue/require-default-prop": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off"
   }
