--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ts-pattern": "^5.0.6",
     "undo-stacker": "^0.2.1",
     "uuid": "^9.0.1",
+    "vant": "^4.8.1",
     "vue": "^3.4.2",
     "vue-router": "^4.2.5"
   },
