test: 💍 rpx适配,调整样式结构,优化冗杂代码

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,12 @@
     "strict": true,
     "sourceMap": true,
     "skipLibCheck": true,
-    "target": "esnext",
+    "target": "ESNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "DOM", "DOM.iterable", "scripthost"],
+    "lib": ["ESNext", "DOM", "DOM.iterable", "scripthost"],
+    "noEmit": true,
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "paths": {
