--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "undo-stacker": "^0.2.1",
     "uuid": "^9.0.1",
     "vant": "^4.8.1",
-    "vue": "^3.4.2",
+    "vue": "^3.4.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -40,10 +40,11 @@
     "@types/node": "^20.10.6",
     "@types/sortablejs": "^1.15.7",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "@unocss/transformer-variant-group": "^0.58.2",
-    "@vitejs/plugin-vue": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "@unocss/core": "^0.58.3",
+    "@unocss/transformer-variant-group": "^0.58.3",
+    "@vitejs/plugin-vue": "^5.0.2",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vueuse/core": "^10.7.1",
     "commitizen": "^4.3.0",
@@ -53,13 +54,15 @@
     "eslint-plugin-vue": "^9.19.2",
     "husky": "^8.0.3",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "postcss": "^8.4.32",
+    "postcss-transform-unit": "^1.1.2",
     "prettier": "^3.1.1",
-    "sass": "^1.69.6",
+    "sass": "^1.69.7",
     "typescript": "5.3.3",
-    "unocss": "^0.58.2",
+    "unocss": "^0.58.3",
     "vite": "^5.0.10",
     "vite-plugin-mock-dev-server": "^1.4.3",
-    "vue-draggable-plus": "^0.3.3",
+    "vue-draggable-plus": "^0.3.4",
     "vue-tsc": "^1.8.27",
     "vue3-draggable-resizable": "^1.6.5"
   },
