--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@nutui/icons-vue": "^0.1.1",
+    "@nutui/nutui": "^4.2.7",
     "@panzoom/panzoom": "^4.5.1",
     "axios": "^1.6.3",
     "element-plus": "^2.4.4",
