--- a/.huskyrc
+++ b/.huskyrc
@@ -5,6 +5,6 @@
     }
   },
   "hooks": {
-    "commit-msg": "npx --no-install commitlint --edit $1"
+    "commit-msg": "npx --no-install commitlint --edit $1 && npx vue-tsc --edit $1"
   }
 }
