--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "孙里海",
-  "name": "low-code-editor",
-  "description": "低代码编辑器",
+  "name": "component-editor",
+  "description": "组件编辑器",
   "license": "MIT",
   "version": "1.0.0",
   "scripts": {
@@ -26,13 +26,15 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "serialize-javascript": "^6.0.2",
     "sortablejs": "^1.15.1",
     "ts-pattern": "^5.0.6",
     "undo-stacker": "^0.2.1",
     "uuid": "^9.0.1",
     "vant": "^4.8.1",
     "vue": "^3.4.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-colorpicker": "^2.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
@@ -40,6 +42,7 @@
     "@icon-park/vue-next": "^1.4.2",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.10.6",
+    "@types/serialize-javascript": "^5.0.4",
     "@types/sortablejs": "^1.15.7",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
