--- a/.huskyrc
+++ b/.huskyrc
@@ -5,6 +5,7 @@
     }
   },
   "hooks": {
-    "commit-msg": "npx --no-install commitlint --edit $1 && npx vue-tsc --edit $1"
+    "pre-commit": "npm run tsc && npm run lint",
+    "commit-msg": "npx --no-install commitlint --edit $1"
   }
 }
