--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rm -rf node_modules",
     "init": "pnpm run clean && pnpm install",
     "prettier": "prettier --write \"src/**/*.{vue,ts,tsx}\"",
-    "lint": "eslint src/**/*.{vue,ts} --fix",
+    "tsc": "vue-tsc --noEmit",
+    "lint": "eslint src/**/*.{vue,ts,tsx} --fix",
     "prepare": "husky install",
     "commit": "git-cz"
   },
